# schema-sentinel

./: .gitignore  DESIGN_UI_UX_SPEC.md  LICENSE  PRD.md  README.md  config.json  findings.md  progress.md  pyproject.toml  schema-contract.json  task_plan.md
.github/workflows/: ci.yml  release.yml
examples/: new.csv  old.csv
schema_sentinel/: __init__.py  __main__.py  cli.py  compare.py  config.py  contract.py  drift.py  errors.py  matching.py  models.py  report.py  risk.py  utils.py  validate.py
schema_sentinel/templates/: report.html.j2  summary.md.j2
scripts/: generate_examples.py
tests/: test_cli.py  test_compare.py  test_config.py  test_contract.py  test_drift.py  test_report.py  test_risk.py  test_validate.py
